# Hacker_Launcher

./: README.md
source-code/: index.html  package.json
source-code/src/: App.tsx  index.css  types.ts
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/capabilities/: default.json
source-code/src-tauri/src/: config_manager.rs  game_manager.rs  lib.rs  prefix_lock.rs  proton_manager.rs  tools.rs
source-code/src/components/: AboutTab.tsx  AddGameModal.tsx  ConfigureGameModal.tsx  ConfirmModal.tsx  ControllerMappingWizard.tsx  ControllersTab.tsx  GamesTab.tsx  ProtonsTab.tsx  SettingsTab.tsx  ToastContainer.tsx
